# mog

./: .gitignore  Cargo.toml  LICENSE  README.md
.helix/: languages.toml
src/: app.rs  indexer.rs  main.rs  nucleo.rs  tantivy.rs  tui.rs
