[package]
name = "emoji-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tantivy = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# nucleo = "0.5.0"
nucleo = { path = "../external/nucleo" }
thiserror = "2.0.11"
